test: add chai-spies dep

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     }
   , "devDependencies": {
         "chai": "*"
+      , "chai-spies": "*"
       , "component": "*"
       , "mocha": "*"
       , "mocha-phantomjs": "*"
